
// Copyright 2021 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/pipe-cd/pipe/pkg/model";

import "validate/validate.proto";
import "pkg/model/common.proto";

message PlanPreviewCommandResult {
    string command_id = 1 [(validate.rules).string.min_len = 1];
    repeated ApplicationPlanPreviewResult results = 2;
    string error = 3;
}

message ApplicationPlanPreviewResult {
    // Application information.
    string application_id = 1;
    string env_id = 2;
    string piped_id = 3;
    string project_id = 4;
    ApplicationKind kind = 6 [(validate.rules).enum.defined_only = true];

    // Target commit information.
    string target_branch = 10;
    string target_head_commit = 11;

    // Plan preview result.
    SyncStrategy sync_strategy = 13;
    bytes changes = 14;

    int64 created_at = 15;
}
